Updated test notebook

--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lisadavinchie/Documents/University/DeepLearning/DL_env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_path = Path(\"../data/datasets/dataset_2000_200_5.pth\")\n",
+    "dataset_path = Path(\"../data/datasets/train/dataset_2000_100_5.pth\")\n",
     "\n",
     "if not dataset_path.exists():\n",
     "    print(\"path does not exist\")\n",
